EGG-166 - Change the breakpoints to avoid jumping.

--- a/src/sass/_nlm-styles.scss
+++ b/src/sass/_nlm-styles.scss
@@ -113,7 +113,7 @@ footer a:hover {
 
 /*Media Quieries */
 
-@media (min-width: 1280px) {
+@media (min-width: 1024px) {
     .usa-nav-container, .usa-banner__inner {
         @include grid-container("desktop-lg");
     }
